# jsbsim-marl-formation

./: .claudeignore  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
data/: trim_table.json
docs/: 2026-06-13-daily-summary.md  2026-06-15-single-pursuit-optimization-summary.md  2026-06-22-training-progress-report.md  2026-06-23-training-summary.md  2026-06-24-training-summary.md  2026-06-25-bfm-discrete-action-optimization.md  2026-06-25-parameterized-action-space-design.md  2026-06-26-phase1-training-summary.md  2026-06-27-29-training-progress.md  2026-06-27-full-training-summary.md  2026-06-27-phase2-breakthrough.md  2026-06-29-work-summary.md  2026-06-30-mappo-progress.md  2026-06-30-work-summary.md  2026-07-01-full-summary.md  2026-07-01-work-summary.md  2026-07-02-full-summary.md  2026-07-03-full-summary.md  2026-07-07-full-summary.md  2026-07-08-full-summary.md  2026-07-09-full-summary.md  2026-07-10-full-summary.md  2026-07-13-full-summary.md  2026-07-14-full-summary.md  2026-07-15-full-summary.md  2026-07-16-full-summary.md  SESSION_SUMMARY_2026-06-12.md  discrete-action-migration-plan.md  marl_env.py  ppt_plan.md  ppt_text.txt  ray-windows-startup-failure-diagnosis.md  wsl2-setup-guide.md
results/: autopilot_step_response.csv  flight_diag_5panel.html  flight_diag_s100.json  heading_tracking_result.acmi  heading_tracking_v2.acmi  heading_v3.acmi  heading_v4.acmi  heading_v5.acmi  phase1a_v5_eval.csv  phase1a_v5final_eval.csv  phase1a_v8_eval.csv  pursuit_damped_3d.html  pursuit_damped_seed100.acmi  (+9 more)
(+402 files in other folders)
