[tool.poetry]
name = "jsbsim-marl-formation"
version = "0.1.0"
description = "Multi-agent formation control and air combat using JSBSim F-16 + MAPPO"
authors = ["Sean Nishimiya <22560063@zju.edu.cn>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NishimiyaXSean/jsbsim-marl-formation"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
scipy = "^1.10"
jsbsim = "^1.2"
gymnasium = "~=1.2"
ray = {extras = ["rllib"], version = "^2.40"}
torch = ">=2.0"
matplotlib = "^3.7"
tensorboard = "^2.20"
pyyaml = ">=6.0"
transforms3d = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
